# TFTP-Server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  utility.sh
content/: about.txt  hello.txt  lorem.txt  lorem2.txt
includes/meta/: helpers.hpp
includes/mybsock/: buffers.hpp  netconfig.hpp  sockets.hpp
includes/mytftp/: messaging.hpp  types.hpp
includes/mytftpd/: driver.hpp  transaction.hpp
src/: CMakeLists.txt  main.cpp
src/mybsock/: CMakeLists.txt  netconfig.cpp  sockets.cpp
src/mytftpd/: CMakeLists.txt  driver.cpp  transaction.cpp
